# RCR

./: Cargo.toml  README.md
src/: egui_renderer.rs  lib.rs  main.rs  oldscene.rs  scene.rs
src/brush/: mod.rs  shader.wgsl
src/brush_circle/: mod.rs  shader.wgsl
src/brush_square/: mod.rs  shader.wgsl
src/gi/: mod.rs
src/gi/difference/: mod.rs  shader.wgsl
src/gi/radiance_cascades/: config.rs  final_shader.wgsl  mod.rs  resources.rs  shader.wgsl
src/gi/raymarcher/: mod.rs  shader.wgsl
src/gi/texture/: mod.rs  shader.wgsl
src/inpututil/: mod.rs
src/jfa/: final.wgsl  main.wgsl  mod.rs  prepare.wgsl
src/jfa2/: final.wgsl  main.wgsl  mod.rs
src/screenpass/: mod.rs
src/texturerenderer/: mod.rs
